publishing small fix for css on mobile, looks fine on chrome responsive but looks incorrect on iphone.

--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -4,6 +4,8 @@
     display: block;
     cursor: pointer;
     margin: 0 auto;
+    text-align: center;
+    border-color: none;
     height: 3.5rem;
     width: 10rem;
     border-radius: 0.4rem;
